# rust-web-app

./: justfile  notes.txt  pyproject.toml
.cargo/: config.toml
crates/libs/lib-core/src/_dev_utils/: dev_db.rs
crates/services/web-server/src/: main.rs
sql/dev_initial/: 00-recreate-db.sql  03-create-schema-cderma.sql
