[tool.poetry]
name = "rust-web-app"
version = "0.1.0"
description = ""
authors = ["bzrq <bosco.dsouza@zrq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
pynvim = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
